# cian-predicter

./: .dockerignore  .gitignore  Dockerfile  README.md  dataset-analyze.ipynb  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: dependencies.py  endpoints.py
app/core/: browser.py  config.py  logger.py  timer.py  transformer.py  ua_manager.py
app/models/: apartment.py  api_schemas.py
app/parser/: base.py  cian.py
app/services/: model_service.py  prediction_service.py  transformer_service.py
app/storage/: writer.py
data/: cian_rentals_clean.csv  cian_rentals_clean.json
models/: catboost_price_predictor.cbm
tests/: test_transformer.py
