[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cian-ml-implementation"
version = "0.1.0"
description = "Cian rental data ml implementation"
readme = "README.md"
authors = [{ name = "Alex", email = "alexo375@yandex.ru" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "catboost>=1.2.0",
    "shap>=0.44.0",
    "optuna>=3.5.0",
    "statsmodels>=0.14.6",
]

[tool.setuptools.packages.find]
where = ["."]
namespaces = false

[project.optional-dependencies]
dev = ["ruff"]

# --- Настройки инструментов ---
[tool.ruff]
line-length = 120
select = ["E", "F"] # Enable pycodestyle errors, Pyflakes
ignore = []
